--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@ input:checked + label{color:white}
   </div>
 </div>
 </div>
-</main>
+<footer>
   <div class="text-[11px] text-center">
     Challenge by <a class="text-[#3e52a3]" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a class="text-[#3e52a3]" href="#">Chyunjet</a>.
   </div>
+  </footer>
+  </main>
 </body>
 </html>
